[#235] Fixed alignment of headlines

--- a/erfurt/src/main/resources/META-INF/resources/scss/base/_header.scss
+++ b/erfurt/src/main/resources/META-INF/resources/scss/base/_header.scss
@@ -17,7 +17,7 @@ header {
 }
 
 #headlineWrapper {
-  padding-top: 20px;
+  padding-top: 40px;
 
   h3 {
     font-size: 26px;
